--- a/sparta/package.json
+++ b/sparta/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
+    "cheerio": "^1.0.0-rc.10",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "iconv-lite": "^0.6.3",
     "mongoose": "^6.0.6"
   }
 }
