--- a/nomadZoom/package.json
+++ b/nomadZoom/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "redis": "^3.1.2"
   },
   "devDependencies": {},
   "scripts": {
